[package]
name = "encore-builder"
version = "0.1.1"
edition = "2024"

[build-dependencies]
bootloader = "0.11.10"
encore = { path = "encore", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
ovmf-prebuilt = "0.2.2"

[workspace]
members = ["encore"]
